sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value lgr
  var ecart = lgr;
              ^AlgCombSort:7: error: not found: value t
    t=true
    ^AlgCombSort:15: error: not found: value t
        t=false
        ^